--- a/package.json
+++ b/package.json
@@ -18,5 +18,15 @@
     "globals": "^15.9.0",
     "prettier": "3.3.3",
     "typescript-eslint": "^8.7.0"
+  },
+  "dependencies": {
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.10"
+  },
+  "lint-staged": {
+    "**/*.{js,ts}": [
+      "eslint --fix",
+      "prettier --write ."
+    ]
   }
 }
