--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
     "prettier": "3.3.3",
+    "typescript": "4.5.4",
     "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
     "husky": "^8.0.0",
-    "lint-staged": "^15.2.10"
+    "lint-staged": "^15.2.10",
+    "pino": "^9.4.0"
   },
   "lint-staged": {
     "**/*.{js,ts}": [
