--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -11,13 +12,14 @@
     "helmet": "^7.1.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/helmet": "^4.0.0",
+    "@types/express": "4.17.21",
+    "@types/helmet": "0.0.48",
     "@types/node": "^22.7.3",
     "envalid": "^8.0.0",
-    "nodemon": "^3.1.5",
+    "nodemon": "^3.1.7",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
