--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -17,6 +18,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/helmet": "0.0.48",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.3",
     "envalid": "^8.0.0",
     "nodemon": "^3.1.7",
